--- a/.github/workflows/mon-pipeline.yml
+++ b/.github/workflows/mon-pipeline.yml
@@ -6,7 +6,7 @@ on:
 
 jobs:
   build:
-    runs-on: self-hosted # <--- Utilise ton PC
+    runs-on: self-hosted 
     steps:
       - name: Récupération du code
         uses: actions/checkout@v4
